test/errhandling/strict-try.good
strict-try.chpl:4: error: throwing call without try or try! (strict mode)
Note: This source location is a guess.
